# AdamsSSMasseyProductCalculator

./: .gitignore  Cargo.toml  massey-prods-a-h0-h1-32-102-v2-is-fixed.txt  massey-prods-a-h0-h1-32-102.data.bak  massey-prods-a-h1-h0-32-102-v2-is-fixed.txt  massey-prods-for-a-h0-h1.txt  nonzero-massey-prods-and-indeterminacy-all-mults.txt  nonzero-massey-prods-and-indeterminacy.txt  nonzero-massey-prods.txt  verifier-output.txt  zero-massey-prods.txt
S_2_multiplication_data_bak/: mult_s10_t10_0.data  mult_s10_t28_0.data  mult_s10_t29_0.data  mult_s10_t32_0.data  mult_s10_t33_0.data  mult_s10_t34_0.data  mult_s10_t35_0.data  mult_s10_t38_0.data  mult_s10_t40_0.data  mult_s10_t41_0.data  mult_s10_t41_1.data  mult_s10_t44_0.data  mult_s10_t47_0.data  mult_s10_t50_0.data  mult_s10_t51_0.data  mult_s10_t54_0.data  mult_s10_t57_0.data  mult_s11_t11_0.data  mult_s11_t30_0.data  mult_s11_t34_0.data  mult_s11_t35_0.data  mult_s11_t36_0.data  mult_s11_t41_0.data  mult_s11_t42_0.data  mult_s11_t45_0.data  mult_s11_t48_0.data  mult_s11_t51_0.data  mult_s11_t52_0.data  mult_s11_t54_0.data  mult_s11_t57_0.data  mult_s12_t12_0.data  mult_s12_t35_0.data  mult_s12_t37_0.data  mult_s12_t42_0.data  mult_s12_t43_0.data  mult_s12_t45_0.data  mult_s12_t46_0.data  mult_s12_t48_0.data  mult_s12_t49_0.data  mult_s12_t51_0.data  (+275 more)
src/: adams.rs  affinespace.rs  computation.rs  lattice.rs  lib.rs  main.rs  utils.rs
src/adams/: element.rs  generator.rs  masseyproduct.rs  multiplication.rs
