[package]
name = "massey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext = { git = "https://github.com/spectralsequences/sseq/", tag = "v0.0.2", default-features = false }
algebra = { git = "https://github.com/spectralsequences/sseq/", tag = "v0.0.2", default-features = false, features = ["json"] }
bivec = { git = "https://github.com/spectralsequences/sseq/", tag = "v0.0.2" }
fp = { git = "https://github.com/spectralsequences/sseq/", tag = "v0.0.2", default-features = false }
once = { git = "https://github.com/spectralsequences/sseq/", tag = "v0.0.2" }
query = { git = "https://github.com/spectralsequences/sseq/", tag = "v0.0.2" }
anyhow = "1.0.0"
rayon = { version = "1.5", optional = true }

[features]
default = ["concurrent", "zstd"]
concurrent = ["ext/concurrent"]
save-res = []
zstd = ["ext/use-zstd"]